Converted more files to png

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -44,20 +44,35 @@
 		<Content Remove="Assets\Games\Genshin\custom\npc.json" />
 		<Content Remove="Assets\Games\Genshin\elements.json" />
 		<Content Remove="Assets\Games\Genshin\game.json" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AmberCN_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AmberCN_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AyakaSpringbloom_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AyakaSpringbloom_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_BarbaraSummertime_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_BarbaraSummertime_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_DilucFlamme_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_DilucFlamme_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_FischlHighness_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_FischlHighness_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanCN_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanCN_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanSea_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanSea_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KaeyaSailwind_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KaeyaSailwind_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KeqingOpulent_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KeqingOpulent_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KleeBlossoming_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KleeBlossoming_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_LisaSobriquet_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_LisaSobriquet_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_MonaCN_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_MonaCN_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_NingguangOrchid_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_NingguangOrchid_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_RosariaCN_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_RosariaCN_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\AltCharacterSkins\convert.py" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Albedo_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Alhaitham_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Aloy_Thumb.png" />
@@ -68,9 +83,9 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Beidou_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Bennett_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Candace_Thumb.png" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chongyun_Thumb.png" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Collei_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Cyno_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Dehya_Thumb.png" />
@@ -82,7 +97,7 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Faruzan_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Fischl_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Freminet_Thumb.png" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Furina_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Furina_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Ganyu_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Gliders_Thumb.webp" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Gorou_Thumb.png" />
@@ -107,11 +122,14 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Mika_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Mona_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Nahida_Thumb.png" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Navia_Thumb.webp" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Neuvillette_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Navia_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Neuvillette_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Nilou_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Ningguang_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Noelle_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Others.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Others_Unused.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Paimon_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Qiqi_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Raiden_Shogun_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Razor_Thumb.png" />
@@ -125,12 +143,13 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Tartaglia_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Thoma_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Tighnari_Thumb.png" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Traveler_(Female)_Thumb.webp" />
-		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Traveler_(Male)_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Traveler_%28Female%29_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Traveler_%28Male%29_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Traveler_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Venti_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Wanderer_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Weapons_Thumb.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Wriothesley_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Xiangling_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Xiao_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Xingqiu_Thumb.png" />
@@ -143,6 +162,7 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Yun_Jin_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Zhongli_Card.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Zhongli_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\convert.py" />
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Anemo.svg" />
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Cryo.svg" />
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Dendro.svg" />
@@ -154,6 +174,8 @@
 		<Content Remove="Assets\Games\Genshin\Languages\zh-cn\elements.json" />
 		<Content Remove="Assets\Games\Genshin\regions.json" />
 		<Content Remove="Assets\Games\Genshin\weaponClasses.json" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Others.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Weapons_Thumb.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Start_Game.webp" />
     
     <Content Remove="Assets\Games\Honkai\regions.json" />
@@ -218,9 +240,6 @@
 	<ItemGroup>
 		<None Remove="Assets\easterEgg.mp3" />
 		<None Remove="Assets\Fonts\zh-cn2.ttf" />
-		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Others.png" />
-		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Others_Unused.webp" />
-		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Paimon_Thumb.png" />
 		<None Remove="Assets\Games\Genshin\Images\Start_Game.png" />
 		<None Remove="Assets\Games\Honkai\Images\Start_Game.png" />
 		<None Remove="Styles\FontTypes.xaml" />
@@ -287,10 +306,70 @@
 		<None Update="Assets\Games\Genshin\characters.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Traveler_(Female)_Thumb.webp">
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AmberCN_Thumb.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Traveler_(Male)_Thumb.webp">
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_AyakaSpringbloom_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_BarbaraSummertime_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_DilucFlamme_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_FischlHighness_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanCN_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_JeanSea_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KaeyaSailwind_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KeqingOpulent_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_KleeBlossoming_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_LisaSobriquet_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_MonaCN_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_NingguangOrchid_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\AltCharacterSkins\Character_Skin_RosariaCN_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Furina_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Navia_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Neuvillette_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Traveler_%28Female%29_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Traveler_%28Male%29_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Wriothesley_Thumb.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Languages\zh-cn\characters.json">
@@ -380,13 +459,7 @@
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Candace_Thumb.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.webp">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Chongyun_Thumb.png">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Collei_Thumb.png">
@@ -420,9 +493,6 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Freminet_Thumb.png">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Furina_Thumb.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Ganyu_Thumb.png">
@@ -495,12 +565,6 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Nahida_Thumb.png">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Navia_Thumb.webp">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="Assets\Games\Genshin\Images\Characters\Character_Neuvillette_Thumb.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Nilou_Thumb.png">
@@ -633,6 +697,12 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Honkai\game.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Honkai\Images\Characters\Character_Others.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Honkai\Images\Characters\Character_Weapons_Thumb.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Honkai\Images\Start_Game.webp">
@@ -864,18 +934,15 @@
 		<Content Update="Assets\Fonts\zh-cn2.ttf">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Update="Assets\Games\Genshin\Images\Characters\Character_Others.png">
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Others.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Update="Assets\Games\Genshin\Images\Characters\Character_Others_Unused.webp">
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Others_Unused.webp">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Update="Assets\Games\Genshin\Images\Characters\Character_Paimon_Thumb.png">
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Characters\Character_Paimon_Thumb.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
-		<Content Update="Assets\Games\Genshin\Images\Characters\Character_Wriothesley_Thumb.webp">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
+		</None>
 		<Content Update="Assets\Games\Genshin\Images\Start_Game.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
