--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -174,6 +174,9 @@
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Geo.svg" />
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Hydro.svg" />
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Pyro.svg" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Clorinde_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Katheryne.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Others.png" />
 		<Content Remove="Assets\Games\Genshin\Languages\zh-cn\characters.json" />
 		<Content Remove="Assets\Games\Genshin\Languages\zh-cn\elements.json" />
 		<Content Remove="Assets\Games\Genshin\regions.json" />
@@ -376,6 +379,12 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Wriothesley_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Clorinde_Thumb.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Others.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Assets\Games\Genshin\Languages\zh-cn\characters.json">
@@ -946,6 +955,9 @@
 		<Content Update="Assets\Fonts\zh-cn2.ttf">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Katheryne.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Games\Genshin\Images\Characters\Character_Others.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
@@ -1110,7 +1122,6 @@
 	<ItemGroup>
 	  <Folder Include="Assets\7z\" />
 	  <Folder Include="Assets\Games\Genshin\custom\" />
-	  <Folder Include="Assets\Games\Genshin\Images\Npcs\" />
 	  <Folder Include="Assets\Games\Genshin\Template\[LangCode]\" />
 	</ItemGroup>
 
